# ascii-renderer

./: .gitignore  README.md  meson.build
src/: geometry.cc  geometry.h  main.cc  main.cpp  screen.cc  screen.h
